3.0.0a5 - Fixed wrong message showing when help button clicked on the RAM setting - Text on the borders of the Addons, Packs and Instances screen is now slightly bigger - Upon creating an account your now prompted if you want to use it straight away or not - Fixed spelling mistake when hiding the Launcher Console - Fixed NPE when password wasn't remembered on an account - Clicking cross on mods selection screen now closed the install procedure instead of continuing - Fixes being able to create instance or play instance if no account is selected - Added PermGen setting - Added warning if Launcher is not in it's own empty folder to prevent big messes - Added Support and Website URL in Pack display